# hltvapi

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  UPGRADE_DESIGN.md  api.py  cli.py  config.example.yaml  deploy.sh  docker-compose.monitoring.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dependency-review.yml  docker.yml  release.yml  security.yml
config/: low-resource.yaml  prometheus.yml
frontend/: .env.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts
frontend/public/: manifest.json
scripts/: install.sh
src/: __init__.py  client.py  config.py  exceptions.py  settings.py
src/antibot/: __init__.py  block_detector.py  fatigue_tracker.py  fingerprint_spoofer.py  font_isolation.py  header_profiles.py  honeypot_detector.py  human_pattern.py  rate_limiter.py  tls_session.py
src/core/: __init__.py  live_tracker.py  orchestrator.py  pipeline.py  process_isolation.py  profile_cross_cover.py  request_scheduler.py  scheduler_service.py  survival_brain.py
src/db/: __init__.py  models.py  repository.py
src/endpoints/: __init__.py  demos.py  events.py  matches.py  news.py  players.py  results.py  search.py  stats.py  teams.py
src/export/: __init__.py  excel.py  pdf.py
src/models/: __init__.py  common.py  event.py  match.py  news.py  player.py  team.py
src/monitor/: __init__.py  core.py  resources.py  ws.py
src/parser/: __init__.py  helpers.py  pipeline.py  (+1 more)
tests/: capture_fixtures.py  conftest.py  test_matches.py  test_new_modules.py  test_ranking.py
(+71 files in other folders)
