[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hltv-api"
version = "5.0.0"
description = "Single-IP Cloudflare bypass CS2 data API for HLTV.org"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501", "F403", "F405"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false

# Ignore known false positives
[[tool.mypy.overrides]]
module = ["src.db.models", "src.plugins.base", "src.parser"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
